[package]
name = "rainmeter_skin_installer"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rm_skin_installer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
rust-ini = "0.19.0"
utf16_reader = "0.1.0"
windows = { version = "0.48.0", features = [
    "System",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }
zip = "0.6.6"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
winres = "0.1.12"
